--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "template-vite-javascript",
+  "name": "personal-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "prepare": "panda codegen",
     "dev": "vite --open",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "11.10.4",
-    "@emotion/styled": "11.10.4",
     "@splidejs/react-splide": "0.7.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.6.0",
-    "react-router-dom": "6.4.2"
+    "wouter": "2.11.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.11.0",
+    "@pandacss/dev": "0.3.2",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@vitejs/plugin-react": "2.1.0",
