--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-vite-javascript",
+  "name": "personal-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,16 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "11.10.4",
-    "@emotion/styled": "11.10.4",
     "@splidejs/react-splide": "0.7.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.6.0",
-    "react-router-dom": "6.4.2"
+    "wouter": "2.11.0"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "11.11.0",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@vitejs/plugin-react": "2.1.0",
