--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "eslint-plugin-n": "15.3.0",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.31.10",
-    "prettier": "2.7.1",
+    "prettier": "^2.7.1",
     "vite": "3.2.7"
   }
 }
