--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@splidejs/react-splide": "0.7.12",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.6.0",
-    "wouter": "2.11.0"
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@types/react": "18.0.17",
