--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@emotion/styled": "^11.11.0",
     "@splidejs/react-splide": "0.7.12",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "atropos": "^2.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.6.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
