:sparkles: Add art and design views
added new views for art and design content

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
@@ -31,6 +32,6 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.31.10",
     "prettier": "^2.7.1",
-    "vite": "3.2.7"
+    "vite": "^5.0.2"
   }
 }
