--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --open",
     "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@splidejs/react-splide": "0.7.12",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "@swc/plugin-emotion": "^2.5.105",
     "atropos": "^2.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -21,17 +23,13 @@
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
-    "@vitejs/plugin-react": "2.1.0",
-    "eslint": "8.25.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-config-standard": "17.0.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-n": "15.3.0",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.31.10",
-    "prettier": "^2.7.1",
-    "vite": "^5.0.2"
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "vite": "^5.0.0"
   }
 }
