--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,6 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home3/jakekapc/public_html/
+    - npm install
+    - npm run build
     - /bin/cp -r build/* $DEPLOYPATH
